force-app/main/default/objects/License_Software__c/License_Software__c.object-meta.xml
<CustomObject>
    <label>License Software</label>
    <nameField>
        <label>License Software</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Software</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>