force-app/main/default/objects/License_Software__c/fields/Active_Sub_Processor__c.field-meta.xml
<CustomField>
    <fullName>Active_Sub_Processor__c</fullName>
    <inlineHelpText
  >Entity that processes Personal Data on behalf of e.Republic.</inlineHelpText>
    <label>Active Sub-Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>