force-app/main/default/objects/License_Software__c/fields/Admin2__c.field-meta.xml
<CustomField>
    <fullName>Admin2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin2</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>License Software</relationshipLabel>
    <relationshipName>License_Software</relationshipName>
    <type>Lookup</type>
</CustomField>