force-app/main/default/objects/License_Software__c/fields/Admin_Login_Notes__c.field-meta.xml
<CustomField>
    <fullName>Admin_Login_Notes__c</fullName>
    <description
  >To provide additional information regarding admin login.</description>
    <inlineHelpText
  >To provide additional information regarding admin login.</inlineHelpText>
    <label>Admin Login Notes</label>
    <type>TextArea</type>
</CustomField>