force-app/main/default/objects/License_Software__c/fields/Admin_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>Admin_Login_URL__c</fullName>
    <label>Admin Login URL</label>
    <type>Url</type>
</CustomField>