force-app/main/default/objects/License_Software__c/fields/Admin_MFA_Details__c.field-meta.xml
<CustomField>
    <fullName>Admin_MFA_Details__c</fullName>
    <inlineHelpText
  >To capture Multi-Factor Authentication details for this service.</inlineHelpText>
    <label>Admin MFA Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>