force-app/main/default/objects/License_Software__c/fields/Admin_Password__c.field-meta.xml
<CustomField>
    <fullName>Admin_Password__c</fullName>
    <description
  >Only visible to users assigned the &quot;License Software - Admin Login Access&quot; Permission Set.</description>
    <label>Admin Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>