force-app/main/default/objects/License_Software__c/fields/Admin_Username__c.field-meta.xml
<CustomField>
    <fullName>Admin_Username__c</fullName>
    <description
  >Only visible to users assigned the &quot;License Software - Admin Login Access&quot; Permission Set.</description>
    <label>Admin Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>