force-app/main/default/objects/License_Software__c/fields/Auto_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Checked if contract is expected to renew automatically.</description>
    <label>Auto-Renewal</label>
    <type>Checkbox</type>
</CustomField>