force-app/main/default/objects/License_Software__c/fields/Auto_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Date__c</fullName>
    <formula>IF(
  Auto_Renewal__c = TRUE,
  Contract_End_Date__c -  Auto_Renewal_Time_Days__c,
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto-Renewal Date</label>
    <type>Date</type>
</CustomField>