force-app/main/default/objects/License_Software__c/fields/Auto_Renewal_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Time_Days__c</fullName>
    <description
  >The number of days before a contract ends that it is expected to be renewed automatically.</description>
    <inlineHelpText
  >The number of days before a contract ends that it is expected to be renewed automatically.</inlineHelpText>
    <label>Auto-Renewal Time (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>