force-app/main/default/objects/License_Software__c/fields/CC_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Exp_Date__c</fullName>
    <description
  >May be easier to work with this as a date field. Change later if this is the case. -Jeff</description>
    <inlineHelpText
  >The expiration date (MM/YY) of the credit card currently on file with the vendor.</inlineHelpText>
    <label>CC Exp Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>