force-app/main/default/objects/License_Software__c/fields/CC_Link__c.field-meta.xml
<CustomField>
    <fullName>CC_Link__c</fullName>
    <description
  >Link to the Virtual Card on file with this vendor.</description>
    <inlineHelpText
  >Link to the Virtual Card on file with this vendor. NOTE: Requires advanced Ramp access.</inlineHelpText>
    <label>CC Link</label>
    <type>Url</type>
</CustomField>