force-app/main/default/objects/License_Software__c/fields/Contracted_For__c.field-meta.xml
<CustomField>
    <fullName>Contracted_For__c</fullName>
    <formula>Current_Contract__r.of_Licenses_Contracted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contracted For</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>