force-app/main/default/objects/License_Software__c/fields/Current_Contract__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Contract</label>
    <referenceTo>License_Contract__c</referenceTo>
    <relationshipLabel>License Software</relationshipLabel>
    <relationshipName>License_Software</relationshipName>
    <type>Lookup</type>
</CustomField>