force-app/main/default/objects/License_Software__c/fields/DP_Display_Type__c.field-meta.xml
<CustomField>
    <fullName>DP_Display_Type__c</fullName>
    <label>DP Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External - Shows on Website</fullName>
            </value>
            <value>
                <fullName>Internal - Hidden from Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>