force-app/main/default/objects/License_Software__c/fields/DP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DP_End_Date__c</fullName>
    <inlineHelpText
  >Date this third party stopped sub-processing e.Republic data</inlineHelpText>
    <label>DP End Date</label>
    <type>Date</type>
</CustomField>