force-app/main/default/objects/License_Software__c/fields/DP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>DP_Start_Date__c</fullName>
    <inlineHelpText
  >Date this third party started sub-processing e.Republic data</inlineHelpText>
    <label>DP Start Date</label>
    <type>Date</type>
</CustomField>