force-app/main/default/objects/License_Software__c/fields/DPA_Date__c.field-meta.xml
<CustomField>
    <fullName>DPA_Date__c</fullName>
    <inlineHelpText
  >Date the Data Processing Agreement was signed</inlineHelpText>
    <label>DPA Date</label>
    <type>Date</type>
</CustomField>