force-app/main/default/objects/License_Software__c/fields/DPA_Link__c.field-meta.xml
<CustomField>
    <fullName>DPA_Link__c</fullName>
    <inlineHelpText
  >Link to the PDF of the signed Data Processing Agreement</inlineHelpText>
    <label>DPA Link</label>
    <type>Url</type>
</CustomField>