force-app/main/default/objects/License_Software__c/fields/DPA_Notes__c.field-meta.xml
<CustomField>
    <fullName>DPA_Notes__c</fullName>
    <label>DPA Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>