force-app/main/default/objects/License_Software__c/fields/Expense_GL__c.field-meta.xml
<CustomField>
    <fullName>Expense_GL__c</fullName>
    <description>To capture the expense GL(s) for the service.</description>
    <label>Expense GL</label>
    <type>TextArea</type>
</CustomField>