force-app/main/default/objects/License_Software__c/fields/Internal_POC_Billing_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Internal_POC_Billing_Renewals__c</fullName>
    <label>Internal POC: Billing &amp; Renewals</label>
    <length>80</length>
    <type>Text</type>
</CustomField>