force-app/main/default/objects/License_Software__c/fields/Internal_POC_Tech_Support__c.field-meta.xml
<CustomField>
    <fullName>Internal_POC_Tech_Support__c</fullName>
    <label>Internal POC: Tech Support</label>
    <length>80</length>
    <type>Text</type>
</CustomField>