force-app/main/default/objects/License_Software__c/fields/Internal_POC_User_Management__c.field-meta.xml
<CustomField>
    <fullName>Internal_POC_User_Management__c</fullName>
    <label>Internal POC: User Management</label>
    <length>80</length>
    <type>Text</type>
</CustomField>