force-app/main/default/objects/License_Software__c/fields/Known_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Known_Challenges__c</fullName>
    <label>Known Challenges</label>
    <type>TextArea</type>
</CustomField>