force-app/main/default/objects/License_Software__c/fields/Licensed_Since__c.field-meta.xml
<CustomField>
    <fullName>Licensed_Since__c</fullName>
    <label>Licensed Since</label>
    <type>Date</type>
</CustomField>