force-app/main/default/objects/License_Software__c/fields/MFA_Notes__c.field-meta.xml
<CustomField>
    <fullName>MFA_Notes__c</fullName>
    <inlineHelpText
  >Information regarding the service&apos;s Multi-Factor Authentication options.</inlineHelpText>
    <label>MFA Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>