force-app/main/default/objects/License_Software__c/fields/MFA_Required__c.field-meta.xml
<CustomField>
    <fullName>MFA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Indicates if users of this service must have Multi-Factor Authentication set up for login security.</inlineHelpText>
    <label>MFA Required</label>
    <type>Checkbox</type>
</CustomField>