force-app/main/default/objects/License_Software__c/fields/Not_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Not_Allocated__c</fullName>
    <label>Not Allocated</label>
    <summaryFilterItems>
        <field>License__c.Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>License__c.Level_NEW__c</field>
        <operation>notEqual</operation>
        <value
    >Zoomgov Basic (Free), View-Only Seat, Asana Enterprise (Guest), Asana Enterprise (Paused), ZoomInfo Admin-Only, Crowdpurr Admin</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.License_Software__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>