force-app/main/default/objects/License_Software__c/fields/Purpose_Services__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Services__c</fullName>
    <inlineHelpText
  >The purpose for why we use the services of a sub-processor.</inlineHelpText>
    <label>Purpose/Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>