force-app/main/default/objects/License_Software__c/fields/Purpose_Services_Detail__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Services_Detail__c</fullName>
    <label>Purpose/Services Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>