force-app/main/default/objects/License_Software__c/fields/Renewal_Cycle_Notes__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Cycle_Notes__c</fullName>
    <label>Renewal Cycle Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>