force-app/main/default/objects/License_Software__c/fields/Security_Certification_Exception__c.field-meta.xml
<CustomField>
    <fullName>Security_Certification_Exception__c</fullName>
    <inlineHelpText>Security Certification exception reason</inlineHelpText>
    <label>Security Certification Exception</label>
    <type>TextArea</type>
</CustomField>