force-app/main/default/objects/License_Software__c/fields/Security_Certification_Link__c.field-meta.xml
<CustomField>
    <fullName>Security_Certification_Link__c</fullName>
    <inlineHelpText
  >SharePoint Security Certification folder where all certification PDF types have been uploaded on License Software record.</inlineHelpText>
    <label>Security Certification Link</label>
    <type>Url</type>
</CustomField>