force-app/main/default/objects/License_Software__c/fields/Security_Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Security_Certification_Type__c</fullName>
    <label>Security Certification Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ISO</fullName>
            </value>
            <value>
                <fullName>SOC 1</fullName>
            </value>
            <value>
                <fullName>SOC 2</fullName>
            </value>
            <value>
                <fullName>SOC 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>