force-app/main/default/objects/License_Software__c/fields/Sub_Processor__c.field-meta.xml
<CustomField>
    <fullName>Sub_Processor__c</fullName>
    <inlineHelpText>The legal name of the sub-processor entity.</inlineHelpText>
    <label>Sub-Processor Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>