force-app/main/default/objects/License_Software__c/fields/Total_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Licenses__c</fullName>
    <label>Total Licenses</label>
    <summaryFilterItems>
        <field>License__c.Level_NEW__c</field>
        <operation>notEqual</operation>
        <value
    >Zoomgov Basic (Free), View-Only Seat, Asana Enterprise (Guest), Asana Enterprise (Paused), ZoomInfo Admin-Only, Asana View Only, Sales Navigator Admin (Unlicensed), Crowdpurr Admin</value>
    </summaryFilterItems>
    <summaryForeignKey>License__c.License_Software__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>