force-app/main/default/objects/License_Software__c/fields/User_Management_Notes__c.field-meta.xml
<CustomField>
    <fullName>User_Management_Notes__c</fullName>
    <description
  >To record steps an admin needs to take to manage users for this service.</description>
    <label>User Management Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>