force-app/main/default/objects/License_Software__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <inlineHelpText>Sub-processor website.</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>