force-app/main/default/objects/License_Software__c/fields/What_is_this_for__c.field-meta.xml
<CustomField>
    <fullName>What_is_this_for__c</fullName>
    <label>What is this for?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>