force-app/main/default/objects/License_Software__c/validationRules/Auto_Renewal_Checked_if_Time_Populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Auto_Renewal_Checked_if_Time_Populated</fullName>
    <active>true</active>
    <description
  >You cannot fill in the Auto-Renewal Time (Days) field without also having the Auto-Renewal checkbox checked.</description>
    <errorConditionFormula>NOT(ISBLANK( Auto_Renewal_Time_Days__c ))
&amp;&amp;
 Auto_Renewal__c = FALSE</errorConditionFormula>
    <errorMessage
  >Check Auto-Renewal box if Auto-Renewal Time (Days) provided.</errorMessage>
</ValidationRule>