force-app/main/default/objects/License_Software__c/validationRules/CC_Exp_Date_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>CC_Exp_Date_Format</fullName>
    <active>false</active>
    <description>CC Exp Date must be formatted MM/YY</description>
    <errorConditionFormula>NOT(ISBLANK( CC_Exp_Date__c ))

/* Figure this out later.

Need format to be: MM/YY where MM can only be 01-12

*/</errorConditionFormula>
    <errorDisplayField>CC_Exp_Date__c</errorDisplayField>
    <errorMessage>Must format date as MM/YY</errorMessage>
</ValidationRule>