force-app/main/default/objects/License_Software__c/listViews/Active_Cloud_Services_with_Admins.listView-meta.xml
<ListView>
    <fullName>Active_Cloud_Services_with_Admins</fullName>
    <columns>NAME</columns>
    <columns>What_is_this_for__c</columns>
    <columns>Admin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Status__c</field>
        <operation>notEqual</operation>
        <value>Renewed,Completed,Not Renewing</value>
    </filters>
    <label>Active Cloud Services with Admins</label>
</ListView>