force-app/main/default/objects/License_Software__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Admin__c</columns>
    <columns>Current_Contract__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Contracted_For__c</columns>
    <columns>Total_Licenses__c</columns>
    <columns>Licenses_in_Use__c</columns>
    <columns>Not_Allocated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>