force-app/main/default/objects/License_Software__c/listViews/Cloud_Service_Owners.listView-meta.xml
<ListView>
    <fullName>Cloud_Service_Owners</fullName>
    <columns>NAME</columns>
    <columns>What_is_this_for__c</columns>
    <columns>Admin__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Current_Contract__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Renewed,Not Renewing</value>
    </filters>
    <label>Cloud Service Lookup</label>
</ListView>